// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typeahead should render 1`] = `
<Downshift
  defaultHighlightedIndex={null}
  defaultIsOpen={false}
  environment={{}}
  getA11yStatusMessage={[Function]}
  id="keyList"
  itemToString={[Function]}
  onChange={[MockFunction]}
  onInputValueChange={[Function]}
  onOuterClick={[Function]}
  onSelect={[Function]}
  onStateChange={[Function]}
  onUserAction={[Function]}
  scrollIntoView={[Function]}
  selectedItemChanged={[Function]}
  stateReducer={[Function]}
  suppressRefError={false}
/>
`;

exports[`TypeaheadMenu should handle the currently highlighted item 1`] = `
<styled.div>
  <styled.ul>
    <styled.li
      key="apple"
      onMouseMove={[Function]}
    >
      <styled.div
        isActive={true}
        isSelected={false}
      >
        apple
      </styled.div>
    </styled.li>
    <styled.li
      key="orange"
      onMouseMove={[Function]}
    >
      <styled.div
        isActive={false}
        isSelected={false}
      >
        orange
      </styled.div>
    </styled.li>
    <styled.li
      key="pear"
      onMouseMove={[Function]}
    >
      <styled.div
        isActive={false}
        isSelected={false}
      >
        pear
      </styled.div>
    </styled.li>
    <styled.li
      key="strawberry"
      onMouseMove={[Function]}
    >
      <styled.div
        isActive={false}
        isSelected={false}
      >
        strawberry
      </styled.div>
    </styled.li>
    <styled.li
      key="raspberry"
      onMouseMove={[Function]}
    >
      <styled.div
        isActive={false}
        isSelected={false}
      >
        raspberry
      </styled.div>
    </styled.li>
  </styled.ul>
</styled.div>
`;

exports[`TypeaheadMenu should handle the currently selected item 1`] = `
<styled.div>
  <styled.ul>
    <styled.li
      key="apple"
      onMouseMove={[Function]}
    >
      <styled.div
        isActive={true}
        isSelected={false}
      >
        apple
      </styled.div>
    </styled.li>
    <styled.li
      key="orange"
      onMouseMove={[Function]}
    >
      <styled.div
        isActive={false}
        isSelected={false}
      >
        orange
      </styled.div>
    </styled.li>
    <styled.li
      key="pear"
      onMouseMove={[Function]}
    >
      <styled.div
        isActive={false}
        isSelected={true}
      >
        pear
      </styled.div>
    </styled.li>
    <styled.li
      key="strawberry"
      onMouseMove={[Function]}
    >
      <styled.div
        isActive={false}
        isSelected={false}
      >
        strawberry
      </styled.div>
    </styled.li>
    <styled.li
      key="raspberry"
      onMouseMove={[Function]}
    >
      <styled.div
        isActive={false}
        isSelected={false}
      >
        raspberry
      </styled.div>
    </styled.li>
  </styled.ul>
</styled.div>
`;

exports[`TypeaheadMenu should handle the menu being open 1`] = `
<styled.div
  openMenu={true}
>
  <styled.ul>
    <styled.li
      key="apple"
      onMouseMove={[Function]}
    >
      <styled.div
        isActive={false}
        isSelected={false}
      >
        apple
      </styled.div>
    </styled.li>
    <styled.li
      key="orange"
      onMouseMove={[Function]}
    >
      <styled.div
        isActive={false}
        isSelected={false}
      >
        orange
      </styled.div>
    </styled.li>
    <styled.li
      key="pear"
      onMouseMove={[Function]}
    >
      <styled.div
        isActive={false}
        isSelected={false}
      >
        pear
      </styled.div>
    </styled.li>
    <styled.li
      key="strawberry"
      onMouseMove={[Function]}
    >
      <styled.div
        isActive={false}
        isSelected={false}
      >
        strawberry
      </styled.div>
    </styled.li>
    <styled.li
      key="raspberry"
      onMouseMove={[Function]}
    >
      <styled.div
        isActive={false}
        isSelected={false}
      >
        raspberry
      </styled.div>
    </styled.li>
  </styled.ul>
</styled.div>
`;

exports[`TypeaheadMenu should render 1`] = `
<styled.div>
  <styled.ul>
    <styled.li
      key="apple"
      onMouseMove={[Function]}
    >
      <styled.div
        isActive={false}
        isSelected={false}
      >
        apple
      </styled.div>
    </styled.li>
    <styled.li
      key="orange"
      onMouseMove={[Function]}
    >
      <styled.div
        isActive={false}
        isSelected={false}
      >
        orange
      </styled.div>
    </styled.li>
    <styled.li
      key="pear"
      onMouseMove={[Function]}
    >
      <styled.div
        isActive={false}
        isSelected={false}
      >
        pear
      </styled.div>
    </styled.li>
    <styled.li
      key="strawberry"
      onMouseMove={[Function]}
    >
      <styled.div
        isActive={false}
        isSelected={false}
      >
        strawberry
      </styled.div>
    </styled.li>
    <styled.li
      key="raspberry"
      onMouseMove={[Function]}
    >
      <styled.div
        isActive={false}
        isSelected={false}
      >
        raspberry
      </styled.div>
    </styled.li>
  </styled.ul>
</styled.div>
`;
